--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,7 +1,7 @@
 [theme]
 
 # The preset Streamlit theme that your custom theme inherits from. One of "light" or "dark".
-base = "light"
+base = "dark"
 
 # Primary accent color for interactive elements.
 primaryColor = "#c8252b"
